--- a/BodegaMovil/Views/CapturaArticuloPage.xaml
+++ b/BodegaMovil/Views/CapturaArticuloPage.xaml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:controls="clr-namespace:BodegaMovil.Views.Controls"
-             x:Class="BodegaMovil.Views.CapturaArticuloPage"
-             Title="Captura">
-    <controls:ArticuloControl
-        IsForSurtir="True"
-        BindingContext="{Binding .}">
-    </controls:ArticuloControl>
+<ContentPage
+    x:Class="BodegaMovil.Views.CapturaArticuloPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:controls="clr-namespace:BodegaMovil.Views.Controls"
+    Title="Captura"
+    Shell.NavBarIsVisible="False">
+    <controls:ArticuloControl BindingContext="{Binding .}" IsForSurtir="True" />
 </ContentPage>
