--- a/BodegaMovil/Views/AgregaArticuloPage.xaml
+++ b/BodegaMovil/Views/AgregaArticuloPage.xaml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BodegaMovil.Views.AgregaArticuloPage"
-             xmlns:controls="clr-namespace:BodegaMovil.Views.Controls"
-             Title="Agrega Articulo">
+<ContentPage
+    x:Class="BodegaMovil.Views.AgregaArticuloPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:controls="clr-namespace:BodegaMovil.Views.Controls"
+    Title="Agrega Articulo"
+    Shell.NavBarIsVisible="False">
 
-    <controls:ArticuloControl
-        IsForAdd="True"
-        BindingContext="{Binding .}">
-    </controls:ArticuloControl>
+    <controls:ArticuloControl BindingContext="{Binding .}" IsForAdd="True" />
 </ContentPage>
